Corrections Thomas & Mathieu

--- a/poster_Okinawa.tex
+++ b/poster_Okinawa.tex
@@ -66,6 +66,8 @@
 \def\Subhead#1{\noindent{\large\color{Accent1}\textsc{#1}}}
 \def\Title#1{\noindent{\VeryHuge\color{Accent2}\raggedright\textsf{#1}}}
 
+\renewcommand{\descriptionlabel}[1]{\hspace{\labelsep}\textcolor{Accent2}{\textsc{#1}}}
+
 % The textpos package is necessary to position textblocks at arbitary 
 % places on the page.
 \usepackage[absolute,overlay,%showboxes
@@ -179,7 +181,11 @@ Wrinkling of a confined porous layer
 	\end{groupplot}
 	\end{tikzpicture}
 	
-\Subhead{Confocal microscopy}\\ 10\% labelled casein
+\Subhead{Microscopy}
+\begin{description}
+\item[macroscope] transmission \& reflection
+\item[confocal] 10\% labelled casein
+\end{description} 
 \end{textblock}
 
 \begin{textblock}{7}(4,2.5)
@@ -195,10 +201,10 @@ Wrinkling of a confined porous layer
 		\fill[gray] (0,0) rectangle (0.05\textwidth,-2.5em) (\textwidth,0) rectangle (0.95\textwidth,-2.5em) node[pos=1, above left] {spacer};
 		\draw[<->] (0.75\textwidth,-2pt) -- (0.75\textwidth,-2.5em) node[midway,left] {$e\sim 100\,\mu m$};
 		\draw[<->] (0.05\textwidth,2.25em) -- (0.95\textwidth,2.25em) node[midway,above] (L){$L\sim 2.5\,cm$};
-		\node[anchor=north west, inner sep=0] at ($(L.north) - (0.5\textwidth,0)$) {\Subhead{Side view}};
+		\node[anchor=north west, inner sep=0] at ($(L.north) - (0.5\textwidth,0)$) {\Subhead{Side view of the cell}};
 	\end{tikzpicture}
 	
-	\Subhead{Top view}\\
+	\Subhead{Top view of the final pattern}\\
 	\begin{tikzpicture}[inner sep=0, very thick]
 	\setlength{\mylength}{\columnwidth}
 	\node[anchor=north west] (a) {\includegraphics[width=0.28\mylength]{cas3p2_fluo0p8_GDL4_50um_coating_2_zoom2_crop}};
@@ -242,8 +248,10 @@ Wrinkling of a confined porous layer
 	\includegraphics[width=0.13\textwidth]{cas3p2_fluo0p8_GDL4_2_t125_crop_resized.jpg}&
 	\includegraphics[width=0.13\textwidth]{cas3p2_fluo0p8_GDL4_2_t260_crop_resized.jpg}\\
 	};
-	\draw[ultra thick] ++(m-2-1.south west) -- ++(0.023\textwidth,0);
-	\draw[ultra thick] ++(m-3-1.south west) -- ++(0.1\textwidth,0);
+	\draw[line width=0.2em] ++(m-2-1.north west) -- ++(0.023\textwidth,0) node[pos=0, above right, inner xsep=0] {\SI{1}{\milli\metre}};
+	\draw[line width=0.2em] ++(m-3-1.south west) -- ++(0.1\textwidth,0) node[pos=0, below right, inner xsep=0] {\SI{1}{\milli\metre}};
+	\node[anchor=north east, rotate=90] at (m-2-1.north east) (macro) {macroscope};
+	\node[anchor=base, rotate=90] at (m-3-1.east-| macro.base) {confocal};
 	\end{tikzpicture}
 \end{textblock}
 
@@ -258,25 +266,15 @@ Wrinkling of a confined porous layer
 \Subhead{Initial contact with a substrate}\\
 	\begin{tikzpicture}
 	\matrix[matrix of nodes, matrix anchor=north east, inner sep=0, row sep=0.01\textwidth]  (m){
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t000.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t011.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t110.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t116.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t117.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t123.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t200.png}\\
-	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t221.png}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t000.png} & \SI{15}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t011.png} & \SI{22}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t110.png} & \SI{1}{\hour}~26\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t116.png} & \SI{1}{\hour}~30\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t117.png} & \SI{1}{\hour}~31\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t123.png} & \SI{1}{\hour}~35\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t200.png} & \SI{2}{\hour}~25\\
+	\includegraphics[width=\columnwidth, height=0.061\columnwidth]{coupe_cloque_t221.png} & \SI{2}{\hour}~40\\
 	};
-	\begin{scope}[above left, white, fill=gray, inner ysep=0]
-		\node at (m-1-1.south east) {\SI{15}{\minute}};
-		\node at (m-2-1.south east) {\SI{22}{\minute}};
-		\node at (m-3-1.south east) {\SI{1}{\hour}~26};
-		\node at (m-4-1.south east) {\SI{1}{\hour}~30};
-		\node at (m-5-1.south east) {\SI{1}{\hour}~31};
-		\node at (m-6-1.south east) {\SI{1}{\hour}~35};
-		\node at (m-7-1.south east) {\SI{2}{\hour}~25};
-		\node at (m-8-1.south east) {\SI{2}{\hour}~40};
-	\end{scope}
 	\draw[<->, ultra thick] ($(m-8-1.south west)+(0,-0.25em)$) -- +(0.786\textwidth,0) node[midway, below] {\SI{1}{\milli\metre}};
 	\end{tikzpicture}
 	
@@ -285,29 +283,17 @@ Cascade buckling \textit{Roman \& Pocheau 1999}
 \Subhead{No initial contact}\\
 \begin{tikzpicture}
 	\matrix[matrix of nodes, matrix anchor=north east, inner sep=0, row sep=0.01\textwidth]  (m){
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t000.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t016.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t032.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t038.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t040.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t043.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t055.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t070.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t123.png}\\
-	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t332.png}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t000.png} & \SI{15}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t016.png} & \SI{23}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t032.png} & \SI{32}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t038.png} & \SI{35}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t040.png} & \SI{36}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t043.png} & \SI{38}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t055.png} & \SI{44}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t070.png} & \SI{53}{\minute}\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t123.png} & \SI{1}{\hour}~21\\
+	\includegraphics[width=\columnwidth, height=0.052\columnwidth]{coupe_plis_t332.png} & \SI{3}{\hour}~15\\
 	};
-	\begin{scope}[above left, white, fill=gray, inner ysep=0]
-		\node at (m-1-1.south east) {\SI{15}{\minute}};
-		\node at (m-2-1.south east) {\SI{23}{\minute}};
-		\node at (m-3-1.south east) {\SI{32}{\minute}};
-		\node at (m-4-1.south east) {\SI{35}{\minute}};
-		\node at (m-5-1.south east) {\SI{36}{\minute}};
-		\node at (m-6-1.south east) {\SI{38}{\minute}};
-		\node at (m-7-1.south east) {\SI{44}{\minute}};
-		\node at (m-8-1.south east) {\SI{53}{\minute}};
-		\node at (m-9-1.south east) {\SI{1}{\hour}~21};
-		\node at (m-10-1.south east) {\SI{3}{\hour}~15};
-	\end{scope}
 	\draw[<->, ultra thick] ($(m-10-1.south west)+(0,-0.25em)$) -- +(0.786\textwidth,0) node[midway, below] {\SI{1}{\milli\metre}};
 	\end{tikzpicture}
 	
@@ -595,26 +581,24 @@ If $\ell_p \sim \eta^{-\alpha}$ and $B\sim \mathrm{k_B}T \left(\frac{h}{\ell}\ri
 \TPMargin*{ 0.125\TPHorizModule }
 \begin{textblock}{2.875}(12,2.625)%real width of 3
 	\Norulehead{Take home}
+	Spontaneous wrinkling of over-acidified casein gels in non-adhesive confinement
+	
 	\Subhead{Original patterns}
 	\begin{itemize}
 		\item nested (optical elements ?)
-		\item generated by swelling
 		\item kinetic wavelength selection
 	\end{itemize}
 	\Subhead{A new wrinkling mechanism}
 	\begin{itemize}
 		\item porous flow resist bending
 		\item Darcy can beat Poiseuille
-		\item may extend to other porous sheets 
-		\begin{itemize}
-			\item wet paper
-			\item biological membranes
-		\end{itemize}
+		\item may extend to other porous sheets\linebreak  (wet paper, biological membranes\ldots)
 	\end{itemize}
 	\Subhead{Viscosity influences}
 	\begin{itemize}
-		\item porous dissipation, thus wrinkling
-		\item gel formation, thus wrinkling
+		\item porous dissipation
+		\item gel formation\hfill
+		\raisebox{0.6\normalbaselineskip}[0pt][0pt]{$\left.\rule{0pt}{1.1\normalbaselineskip}\right\}$ thus wrinkling}
 	\end{itemize}
 	
 
