--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -92,7 +92,7 @@
 
 \newcolumntype{P}[1]{>{\raggedright}p{#1}}
 
-\institute[E.N.S. Lyon]{Ecole Normale Supérieure de Lyon}
+\institute[E.N.S. Lyon]{Laboratoire de physique, Ecole Normale Supérieure de Lyon}
 \title[Yoghurt under stress]{Yoghurt under stress}
 \author[M. Leocmach]{Mathieu Leocmach}
 \date{1st June 2014}
@@ -106,7 +106,6 @@
 	\addtocounter{framenumber}{-1}
 	\begin{frame}[plain]
 		\tableofcontents[currentsection, hideothersubsections]
-		{\footnotesize Leocmach \& Tanaka \textit{Nature Communications} 3, 974 (2012).}
 	\end{frame}
 }
 
@@ -153,9 +152,26 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \item What is the behaviour of a biogel under shear deep into the nonlinear regime?
 \item What is the role of the solvent in mechanical instabilities?
 \end{itemize}
-
 \end{block}
 \end{frame}
+
+\section{Creep and yielding}
+
+\begin{frame}{Merciless yoghurt breakers}
+
+\begin{tabu}{X[c]X[c]c}
+\includegraphics[height=0.3\textheight]{Chris}&
+\includegraphics[height=0.3\textheight]{Thibaut}&
+\includegraphics[height=0.3\textheight]{Seb}\\
+Christophe Perge & Thibaut Divoux & Sebastien Manneville\\
+PhD student & CNRS researcher & Professor\\
+E.N.S Lyon &  CRPP Bordeaux & E.N.S Lyon\\
+\end{tabu}
+
+\end{frame}
+
+
+\section{Wrinkling}
 
 \end{document}
 
