--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -72,6 +72,11 @@
 %\tikzset{external/force remake}
 
 
+%link or play movies
+\usepackage{multimedia}
+
+
+
 %beamer related package
 
 \usepackage{todonotes}
@@ -230,11 +235,13 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \end{frame}
 
 \begin{frame}{Linear rheology: Power law (visco)elastic solid}
+\[\text{stress}\rightarrow \sigma = G \gamma\leftarrow\text{strain}\]
+\[\textcolor{Accent1}{\text{storage}\rightarrow} G^\prime + \imath G^{\prime\prime} \textcolor{Accent2}{\leftarrow\text{loss}}\]
 \begin{tikzpicture}
 \begin{loglogaxis}[
 	height=0.8\textheight,
 	width=\textwidth,
-	xlabel={Frequency (\si{\hertz})}, ylabel={\textcolor{Accent1}{Storage} and \textcolor{Accent2}{Loss} moduli (\si{\pascal})},
+	xlabel={Frequency (\si{\hertz})}, ylabel={\textcolor{Accent1}{Storage} and \textcolor{Accent2}{loss} moduli (\si{\pascal})},
 	domain={6e-2:70},
 	]
 	\addplot[Accent1, only marks, mark=*] table{freqsweep_Y265_cas4_GDL1.txt};
@@ -300,6 +307,7 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 \end{tabu}
 \end{frame}
 
+%\tikzset{external/force remake}
 \begin{frame}{The yoghurt creep experiment}
 \begin{tikzpicture}
 \node[anchor=south west] (webcam){\includegraphics[width=0.2\textwidth]{webcam}};
@@ -319,10 +327,10 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 \end{tikzpicture}
 \end{frame}
 
-\tikzset{external/force remake}
+%\tikzset{external/force remake}
 \begin{frame}{The yoghurt creep experiment}
-\begin{tikzpicture}
-\node[inner sep=0] (a) {\includegraphics[height=16\baselineskip]{/home/mathieu/Documents/tex/svn/Yaourt/creep_experiment.jpg}};
+\movie[externalviewer]{\begin{tikzpicture}
+\node[inner sep=0] (a) {\includegraphics[height=16\baselineskip]{creep_experiment.jpg}};
 \begin{scope}[shift={(a.north west)}, shift={(7.2\baselineskip,-1.1\baselineskip)}, ultra thick]
 	\draw[Accent1] ellipse[x radius=2.9\baselineskip, y radius=0.7\baselineskip] ++(2.9\baselineskip,0)  -- ++(0,-6.6\baselineskip)  ++(-2.9\baselineskip,0) ellipse[x radius=2.9\baselineskip, y radius=0.7\baselineskip] ++(-2.9\baselineskip,0)  -- ++(0,6.6\baselineskip);
 	\shadedraw[Accent2,ball color=Accent2] ellipse[x radius=2\baselineskip, y radius=0.4\baselineskip] ++(2\baselineskip,0)  -- ++(0,-6.6\baselineskip)  ++(-2\baselineskip,0) ellipse[x radius=2\baselineskip, y radius=0.4\baselineskip] ++(-2\baselineskip,0)  -- ++(0,6.6\baselineskip);
@@ -338,9 +346,51 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 \draw[->] (window.north west) ++(-1em, 0.2em) -- +(0,-1em)  node[midway,left] {$z$};
 \node[text width=4\baselineskip] at (-3\baselineskip,-2.5\baselineskip) {shear rate response};
 \node at (5\baselineskip,-2.5\baselineskip) {strain response};
-\end{tikzpicture}
+\end{tikzpicture}%
+}{/home/mathieu/Dropbox/Yaourt/films/Yaourt141_enhanced.avi}
 \end{frame}
 
+\tikzset{external/force remake}
+\begin{frame}{Creep rheology: Three regimes}
+\begin{tikzpicture}
+\begin{loglogaxis}[
+   name=g,
+	width=\textwidth,
+	height=0.8\textheight,
+	xmin=2e-2, xmax=4e5, xlabel={time (\si{\second})},
+	ymin=0.2,ymax=2,
+	ytick={0.2, 0.4,0.8,1.6}, yticklabels={0.2, 0.4,0.8,1.6},
+	ylabel={strain $\gamma$},
+	extra tick style={grid=major},%
+	extra y ticks={1}, extra y tick labels={1.0},
+	cycle list name=earthy,
+	axis on top,
+	]
+	\fill[Accent1!20]
+		(axis cs:10,0.4) ellipse[rotate=-30, x radius=0.2\textwidth, y radius=0.12\textwidth]
+		(axis cs:2e2,1.6) ellipse[x radius=0.3\textwidth, y radius=0.05\textwidth]
+		(axis cs:3e3,0.85) ellipse[rotate=-7.5, x radius=0.3\textwidth, y radius=0.07\textwidth]
+		;
+	\node[above right] at (axis cs:1e1,0.2) {primary};
+	\node[below left] at (axis cs:4e5,0.7) {secondary};
+	\node[left] at (axis cs:5,1.6) {tertiary};
+	\addplot table{Y27_200Pa_gamma_decimated.txt} node (s200){};
+	\addplot table{Y38_300Pa_gamma_decimated.txt} node (s300){};
+	\addplot table{Y25_400Pa_gamma_decimated.txt}  node (s400){};
+	\addplot table{Y32_550Pa_gamma_decimated.txt}  node (s550){};
+	\addplot table{Y39_1000Pa_gamma_decimated.txt} node (s1000){};
+\end{loglogaxis}
+\begin{scope}[anchor=base, every node/.style={yshift=0.2em}]
+	\node[red!40!black] at (s200 |- g.outer north) {\SI{200}{\pascal}};
+	\node[red!60!black] at (s300 |- g.outer north) {300};
+	\node[red!80!black] at (s400 |- g.outer north) {400};
+	\node[red] at (s550 |- g.outer north) {550};
+	\node[red!80!yellow] at (s1000 |- g.outer north) {1000};
+\end{scope}
+\end{tikzpicture}
+
+Failure at $\gamma\approx 1$ for a well defined time $\tau_f$
+\end{frame}
 
 \section{Wrinkling}
 
