Bonn_fracture and Villi centred

--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -166,12 +166,15 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \begin{frame}{Fundamental issues in biogels}
 \begin{itemize}
-\item Linear elasticity in not well understood \textit{\scriptsize Gardel et al. Science 2004}
+\item Linear elasticity is not well understood \textit{\scriptsize Gardel et al. Science 2004}
 \item Strain and stress stiffening \textit{\scriptsize Storm et al. Nature 2005}
 \item Fractures \textit{\scriptsize Bonn et al. Science 1998, Baumberger et al. Nature Material 2006}
 \item Mechanical instabilities and morphogenesis \textit{\scriptsize Shyer et al. Science 2013}
 \end{itemize}
-\includegraphics[height=3\baselineskip]{Villi_sq}
+\begin{tabu}{X[c]X[c]}
+\includegraphics[height=6\baselineskip]{Bonn_fracture} &
+\includegraphics[height=6\baselineskip]{Villi_sq}
+\end{tabu}
 \begin{block}{Our questions}
 \begin{itemize}
 \item What is the behaviour of a biogel under shear deep into the nonlinear regime?
@@ -185,12 +188,12 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 %\tikzset{external/force remake}
 \begin{frame}{Acid-set protein gel (Yoghurt)}
-\begin{block}{Recipe}
+\begin{block}{Recipe: take your time}
 \begin{itemize}
 \item Water (\SI{30}{\celsius})
 \item Sodium caseinate (milk protein) 4\%
 \raisebox{0.6\normalbaselineskip}[0pt][0pt]{$\left.\rule{0pt}{1.1\normalbaselineskip}\right\}$ stable solution}
-\item Glucono-$\delta$-lactone (GDL) 1\% $\Rightarrow$ slow acidification
+\item Glucono-$\delta$-lactone (GDL) 1\% $\Rightarrow$ slow homogeneous acidification
 \end{itemize}
 \end{block}
 
@@ -288,7 +291,10 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \section*{Creep and yielding}
 
-\begin{frame}{Merciless yoghurt breakers}
+\begin{frame}{Creep and yielding}
+\structure{Merciless yoghurt breakers}
+
+\bigskip
 \begin{tabu}{X[c]X[c]c}
 \includegraphics[height=0.3\textheight]{Chris}&
 \includegraphics[height=0.3\textheight]{Thibaut}&
@@ -319,7 +325,7 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 \end{tikzpicture}
 \end{frame}
 
-\tikzset{external/force remake}
+%\tikzset{external/force remake}
 \begin{frame}{The yoghurt creep experiment}
 \movie[externalviewer]{\begin{tikzpicture}
 \node[inner sep=0] (a) {\includegraphics[height=16\baselineskip]{creep_experiment.jpg}};
@@ -385,7 +391,7 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 Failure at $\gamma\approx 1$ for a well defined time $\tau_f$
 \end{frame}
 
-\section{Wrinkling}
+\section*{Wrinkling}
 
 %\tikzset{external/force remake}
 \begin{frame}{Over-acidification: Faster but weaker}
